--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "next": "14.1.0"
+    "next": "^15.2.3"
   },
   "devDependencies": {
     "typescript": "^5.3.3",
@@ -20,6 +20,6 @@
     "@types/react": "^18.2.57",
     "@types/react-dom": "^18.2.19",
     "eslint": "^8.56.0",
-    "eslint-config-next": "14.1.0"
+    "eslint-config-next": "^15.2.3"
   }
 }
