--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,17 +2,19 @@ name: Deploy to GitHub Pages
 
 on:
   push:
-    branches: [ main ]  # or your default branch
+    branches: [ main ]
   pull_request:
     branches: [ main ]
 
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
-
+    permissions:
+      contents: write
     steps:
-      - name: Checkout
-        uses: actions/checkout@v3
+      - uses: actions/checkout@v3
+        with:
+          token: ${{ secrets.BELLCOLLEEN_DEPLOY_ACCESS_TOKEN }}
 
       - name: Setup Node.js
         uses: actions/setup-node@v3
@@ -37,3 +39,4 @@ jobs:
           branch: gh-pages
           folder: out
           clean: true
+          token: ${{ secrets.BELLCOLLEEN_DEPLOY_ACCESS_TOKEN }}
